--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx prisma generate && tsc -p .",
+    "start": "npm run build && node ./build/server.js",
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "Samuel Oliveira de Moura",
@@ -16,12 +18,13 @@
     "schema": "./prisma/schema.prisma"
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.2",
     "@types/bcryptjs": "^2.4.4",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.18",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.6.2",
+    "@types/node": "^20.10.5",
     "eslint": "^7.21.0",
     "prisma": "^5.7.0",
     "tsx": "^3.12.10",
@@ -35,8 +38,10 @@
     "bcryptjs": "^2.4.3",
     "blob-stream": "^0.1.3",
     "cors": "^2.8.5",
+    "cpf-cnpj-validator": "^1.0.3",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
+    "esbuild": "^0.19.10",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "fetch-blob": "^4.0.0",
