--- a/package.json
+++ b/package.json
@@ -45,10 +45,13 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "fetch-blob": "^4.0.0",
+    "firebase-admin": "^12.0.0",
+    "fs": "^0.0.1-security",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "swagger-ui-express": "^5.0.0"
   }
 }
