--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
 	"version": 2,
 	"builds": [
 	  {
-		"src": "src/server.js",
+		"src": "public/server.js",
 		"use": "@vercel/node"
 	  }
 	],
 	  "routes": [
 		  {
 			"src": "/(.*)",
-			"dest": "src/server.js",
+			"dest": "public/server.js",
 			"methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
 			"headers": {"Access-Control-Allow-Origin": "*"}
 		  }
