--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
 		"routes": [
 						{
 									"src": "/(.*)",
-									"dest": "public/src/server.js",
+									"dest": "public/server.js",
 									"methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
 									"headers": {"Access-Control-Allow-Origin": "*"}
 						}
