--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "npm": "^10.5.0",
     "path": "^0.12.7",
     "swagger-ui-express": "^5.0.0"
   }
