--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
     "@types/express": "^4.17.18",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.10.5",
+    "@types/node": "^20.19.33",
+    "@types/pg": "^8.16.0",
     "eslint": "^7.21.0",
-    "prisma": "^5.7.0",
+    "prisma": "^5.22.0",
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.17.0",
+    "@prisma/adapter-pg": "^7.4.1",
+    "@prisma/client": "^5.22.0",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/swagger-ui-express": "^4.1.4",
     "axios": "^1.6.2",
@@ -37,7 +39,7 @@
     "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
     "dayjs": "^1.11.10",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "esbuild": "^0.19.10",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -50,6 +52,8 @@
     "multer": "^1.4.5-lts.1",
     "npm": "^10.5.0",
     "path": "^0.12.7",
+    "pg": "^8.18.0",
     "swagger-ui-express": "^5.0.0"
   }
+  
 }
